--- a/src/Components/SinglePost/singlePost.css
+++ b/src/Components/SinglePost/singlePost.css
@@ -1,41 +1,56 @@
 .singlepost-container {
   width: 80%;
-  background-color: darkgray;
   margin: 30px auto;
   text-align: center;
   padding: 10px;
-  border-radius: 15px;
-  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
+.title {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 3px 1px black;
+  padding: 10px;
+}
 .singlepost-text {
-  background-color: black;
-  color: wheat;
   width: 80%;
   padding: 10px;
   min-height: 100px;
   max-height: 300px;
-  margin: auto;
-  border-radius: 15px;
-  border: 3px solid black;
+  margin: 30px 0;
+  border: none;
+  box-shadow: 1px 1px 3px 1px black;
+  border-radius: 10px;
 }
 
 .public {
   background-color: green;
   width: fit-content;
-  margin: auto;
-  padding: 5px 5px;
-  margin-top: 10px;
+  margin: 10px auto;
+  padding: 10px;
   border-radius: 10px;
   border: 2px solid green;
+  cursor: pointer;
 }
 
 .private {
+  cursor: pointer;
   background-color: red;
   width: fit-content;
-  margin: auto;
-  padding: 5px 5px;
-  margin-top: 10px;
+  margin: 10px auto;
+  padding: 10px;
   border-radius: 10px;
   border: 2px solid red;
+}
+
+.save-post {
+  cursor: pointer;
+  margin-top: 30px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 20px;
 }
