--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,46 +1,12 @@
 .post-container {
-  width: 50%;
-  margin: 20px auto;
-  background-color: darkgray;
   text-align: center;
-  padding: 10px 5px;
-  border: 2px solid black;
-  border-radius: 15px;
+  color: black;
 }
-
-.post-container * {
-  pointer-events: none;
-}
-
-.text-container {
-  width: 90%;
+.btn {
+  width: 50%;
   margin: auto;
-  border: 2px solid black;
-  background-color: black;
-  min-height: 100px;
-  max-height: 200px;
-  color: wheat;
-  border-radius: 15px;
-  padding: 10px 5px;
-  box-sizing: border-box;
 }
-
-.public {
-  background-color: green;
-  width: fit-content;
-  margin: auto;
-  padding: 5px 5px;
-  margin-top: 10px;
-  border-radius: 10px;
-  border: 2px solid green;
-}
-
-.private {
-  background-color: red;
-  width: fit-content;
-  margin: auto;
-  padding: 5px 5px;
-  margin-top: 10px;
-  border-radius: 10px;
-  border: 2px solid red;
+.spinner {
+  display: flex;
+  justify-content: center;
 }
