--- a/src/Components/SinglePost/singlePost.css
+++ b/src/Components/SinglePost/singlePost.css
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.spinner {
+  display: flex;
+  justify-content: center;
+}
+
 .title {
   border: none;
   border-radius: 10px;
@@ -17,8 +22,6 @@
 .singlepost-text {
   width: 80%;
   padding: 10px;
-  min-height: 100px;
-  max-height: 300px;
   margin: 30px 0;
   border: none;
   box-shadow: 1px 1px 3px 1px black;
